--- a/views/socket.ejs
+++ b/views/socket.ejs
@@ -2,13 +2,18 @@
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
 	rel="stylesheet"
 />
-<script src="/socket.io/socket.io.js"></script>
+<!-- <script src="/socket.io/socket.io.js"></script> -->
+<script
+	src="https://cdn.socket.io/4.1.1/socket.io.min.js"
+	integrity="sha384-cdrFIqe3RasCMNE0jeFG9xJHog/tgOVC1E9Lzve8LQN1g5WUHo0Kvk1mawWjxX7a"
+	crossorigin="anonymous"
+></script>
 
 <div class="container text-center">
 	<button class="btn btn-secondary mt-5" id="send">Send</button>
 </div>
 <script>
-	const socket = io();
+	const socket = io("http://localhost:5000");
 
 	document.getElementById("send").addEventListener("click", () => {
 		socket.emit("message", {
@@ -19,6 +24,10 @@
 	});
 
 	socket.on("all", (data) => {
+		console.log(data);
+	});
+
+	socket.on("sender", (data) => {
 		console.log(data);
 	});
 </script>
