--- a/views/socket.ejs
+++ b/views/socket.ejs
@@ -2,18 +2,18 @@
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
 	rel="stylesheet"
 />
-<!-- <script src="/socket.io/socket.io.js"></script> -->
-<script
+<script src="/socket.io/socket.io.js"></script>
+<!-- <script
 	src="https://cdn.socket.io/4.1.1/socket.io.min.js"
 	integrity="sha384-cdrFIqe3RasCMNE0jeFG9xJHog/tgOVC1E9Lzve8LQN1g5WUHo0Kvk1mawWjxX7a"
 	crossorigin="anonymous"
-></script>
+></script> -->
 
 <div class="container text-center">
 	<button class="btn btn-secondary mt-5" id="send">Send</button>
 </div>
 <script>
-	const socket = io("http://localhost:5000");
+	const socket = io();
 
 	document.getElementById("send").addEventListener("click", () => {
 		socket.emit("message", {
