--- a/views/socket.ejs
+++ b/views/socket.ejs
@@ -3,24 +3,50 @@
 	rel="stylesheet"
 />
 <script src="/socket.io/socket.io.js"></script>
-<!-- <script
-	src="https://cdn.socket.io/4.1.1/socket.io.min.js"
-	integrity="sha384-cdrFIqe3RasCMNE0jeFG9xJHog/tgOVC1E9Lzve8LQN1g5WUHo0Kvk1mawWjxX7a"
-	crossorigin="anonymous"
-></script> -->
 
-<div class="container text-center">
-	<button class="btn btn-secondary mt-5" id="send">Send</button>
+<div class="row">
+	<div class="col-md-6 mx-auto mt-5">
+		<div class="card p-2">
+			<h4 class="text-center">Fastest SMS Delivery</h4>
+			<div class="msg"></div>
+			<form>
+				<div class="form-group">
+					<label for="phone">Phone</label>
+					<input value="01773551899" id="phone" class="form-control" />
+				</div>
+				<div class="form-group">
+					<label for="Body">Body</label>
+					<textarea
+						class="form-control"
+						id="body"
+						cols="30"
+						rows="3"
+					></textarea>
+				</div>
+				<button id="send" style="width: 100%" class="btn btn-secondary mt-2">
+					Send
+				</button>
+			</form>
+		</div>
+	</div>
 </div>
+
 <script>
 	const socket = io();
-
 	document.getElementById("send").addEventListener("click", () => {
-		socket.emit("message", {
-			_id: String(Math.random()).split(".")[1],
-			phone: "01881818181",
-			body: "test message from socket",
-		});
+		let number = document.querySelector("#phone").value;
+		let body = document.querySelector("#body").value;
+		let msg = document.querySelector(".msg");
+		if (number === "") {
+			msg.innerHTML = `<div class="alert alert-danger">Phone ?</div>`;
+		} else if (body === "") {
+			msg.innerHTML = `<div class="alert alert-danger">body ?</div>`;
+		} else {
+			socket.emit("message", {
+				number,
+				body,
+			});
+		}
 	});
 
 	socket.on("all", (data) => {
