--- a/views/socket.ejs
+++ b/views/socket.ejs
@@ -1,38 +1,35 @@
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-/>
-<script src="/socket.io/socket.io.js"></script>
+<%- include('./partials/header') %>
 
-<div class="row">
-	<div class="col-md-6 mx-auto mt-5">
-		<div class="card p-2">
-			<h4 class="text-center">Fastest SMS Delivery</h4>
-			<div class="msg"></div>
-			<form>
-				<div class="form-group">
-					<label for="phone">Phone</label>
-					<input value="01773551899" id="phone" class="form-control" />
-				</div>
-				<div class="form-group">
-					<label for="Body">Body</label>
-					<textarea
-						class="form-control"
-						id="body"
-						cols="30"
-						rows="3"
-					></textarea>
-				</div>
-				<button id="send" style="width: 100%" class="btn btn-secondary mt-2">
-					Send
-				</button>
-			</form>
+<div class="container">
+	<div class="row">
+		<div class="col-md-6 mx-auto mt-5">
+			<div class="card p-2">
+				<h4 class="text-center">Fastest SMS Delivery</h4>
+				<div class="msg"></div>
+				<form>
+					<div class="form-group">
+						<label for="phone">Phone</label>
+						<input placeholder="01773551899" id="phone" class="form-control" />
+					</div>
+					<div class="form-group">
+						<label for="Body">Body</label>
+						<textarea
+							class="form-control"
+							id="body"
+							cols="30"
+							rows="3"
+						></textarea>
+					</div>
+					<button id="send" style="width: 100%" class="btn btn-secondary mt-2">
+						Send
+					</button>
+				</form>
+			</div>
 		</div>
 	</div>
 </div>
 
 <script>
-	const socket = io();
 	document.getElementById("send").addEventListener("click", (e) => {
 		e.preventDefault();
 		let number = document.querySelector("#phone").value;
