--- a/views/bulk.ejs
+++ b/views/bulk.ejs
@@ -69,6 +69,9 @@
 			}));
 			socket.emit("bulk", data);
 			socket.on("test", (val) => console.log(val));
+			document.getElementById("numbers").value = "";
+			document.getElementById("body").value = "";
+			msg.innerHTML = `<div class="alert alert-success">Message sent in Queue successfull</div>`;
 		}
 	});
 </script>
